impls linkedQueue on inMemoryMessageRepositoryImpls